--- a/conf/hypothesis/bioRxiv.pug
+++ b/conf/hypothesis/bioRxiv.pug
@@ -4,13 +4,13 @@
 |
 | **Summary of datasets and Open Science materials associated with article:**
 |
-each item in [{"key":"protocols","label":"Protocols"},{"key":"datasets","label":"Datasets"},{"key":"codes","label":"Code"},{"key":"reagents","label":"Reagents/Materials/Lab Resources"}]
+each item in [{"key":"protocols","label":"Protocol(s)"},{"key":"datasets","label":"Dataset(s)"},{"key":"codes","label":"Code(s)"},{"key":"reagents","label":"Reagents/Materials/Lab Resources"}]
   if(reportData.sortedDatasetsInfos[item.key].length > 0)
     | - #{`${reportData.sortedDatasetsInfos[item.key].length} ${item.label}`}
     |
 
 each dataType in reportData.datasetsSummary
-  if(dataType.key !== "other")
+  if(dataType.key !== "other" && dataType.key !== "code software" && dataType.key !== "lab materials")
     |
     | **#{dataType.count} #{dataType.type.label} Dataset(s)**
     - let count = dataType.count - dataType.subTypes.reduce((acc, item) => acc += item.count, 0)
