update: add metadata form (curator & annotator) & import of datasets from another document

--- a/views/root/documents/:id/metadata/app.css
+++ b/views/root/documents/:id/metadata/app.css
@@ -21,3 +21,13 @@
 .metadata button > i {
   margin-right: 5px;
 }
+
+.metadata input.form-control {
+  display: inline-block;
+  width: auto;
+}
+
+.metadata input.form-control.article_title {
+  display: inline-block;
+  width: 80%;
+}
