--- a/public/css/datasets/datasets.css
+++ b/public/css/datasets/datasets.css
@@ -214,9 +214,25 @@ body {
 #datasetsList\.container\.bulkActions {
   margin-right: 20px;
   display: inline-block;
-  width: 175px;
+  width: 205px;
   float: right;
   text-align: right;
+}
+
+#datasetsList\.container\.bulkActions #datasetsList\.container\.bulkActions\.importDatasets {
+  display: inline-block;
+  float: left;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+
+#datasetsList\.container\.bulkActions #datasetsList\.container\.bulkActions\.newDataset {
+  display: inline-block;
+  float: right;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  margin-right: 10px;
 }
 
 #datasetsList\.container\.bulkActions #datasetsList\.container\.bulkActions\.newDataset,
