--- a/views/root/documents/:id/finish/app.pug
+++ b/views/root/documents/:id/finish/app.pug
@@ -29,9 +29,6 @@
       </div>
       <div v-if="user.role && (user.role.key === 'moderator' || user.role.key === 'administrator')" class="row buttons">
         <div class="col left">
-          <a target="_blank" :href="docxDefaultReportLink">
-            <button class="btn btn-md btn-primary">DataSeer .docx report</button>
-          </a>
           <a target="_blank" :href="htmlDefaultReportLink">
             <button class="btn btn-md btn-primary">DataSeer HTML report</button>
           </a>
@@ -46,6 +43,17 @@
           <input class="form-control" type="text" ref="annotationUrl" name="annotationUrl" placeholder="URL of the document" :value="document.urls && document.urls.hypothesis ? document.urls.hypothesis : ''" />
           <button class="btn btn-md btn-primary" v-on:click.stop="updateOrCreateAnnotation()" ref="updateOrCreateAnnotation">Update hypothes.is Annotation</button>
           <span class="loader-md" ref="updateOrCreateAnnotationLoader">
+            <i class="fas fa-circle-notch fa-spin"></i>
+          </span>
+        </div>
+      </div>
+      <div v-if="user.role && (user.role.key === 'moderator' || user.role.key === 'administrator')" class="row buttons">
+        <div class="col left">
+          <a target="_blank" :href="gSpreadSheetReportLink">
+            <button class="btn btn-md btn-primary">Open Google SpreadSheet report</button>
+          </a>
+          <button class="btn btn-md btn-primary" v-on:click.stop="buildGSpreadSheetReport(event)">Build Google SpreadSheet report</button>
+          <span class="loader-md" ref="buildGSpreadSheetReportLoader">
             <i class="fas fa-circle-notch fa-spin"></i>
           </span>
         </div>
