update charts & google report (custom values)

--- a/views/charts/asap/pie.pug
+++ b/views/charts/asap/pie.pug
@@ -6,7 +6,7 @@
     <title>#{conf.title}</title>
     <!-- include of global css dependencies -->
     link(rel="icon" type="image/png" href=conf.root + "/public/favicon.ico")
-    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/graphics/asap/pie.css")
+    link(rel="stylesheet" type="text/css" href=conf.root + "/public/css/charts/asap/pie.css")
   </head>
   <body>
     img(src=conf.root + "/public/img/cropped-ASAP_Logo_FullColor.png" alt="Aligning Science Across Parkinson's" height="55" width="295")
@@ -23,7 +23,8 @@
     script(src=conf.root + "/public/js/dependencies/url-join.js")
     script(src=conf.root + "/public/js/conf/conf.js")
     script(src=conf.root + "/public/js/lib/url.js")
+    script(src=conf.root + "/public/js/lib/params.js")
     script(src=conf.root + "/public/js/lib/api.js")
-    script(src=conf.root + "/public/js/graphics/asap/pie.js")
+    script(src=conf.root + "/public/js/charts/asap/pie.js")
   </body>
 </html>
