--- a/views/root/documents/:id/datasets/lib/datasetsList.pug
+++ b/views/root/documents/:id/datasets/lib/datasetsList.pug
@@ -5,6 +5,9 @@
       <div id="datasetsList.container.items.container"></div>
     </div>
     <div id="datasetsList.container.bulkActions">
+      <div id="datasetsList.container.bulkActions.detectNewSentences" title="Detect new sentences (OCR)">
+        <button class="btn btn-primary btn-sm"><i class="fab fa-readme"></i></button>
+      </div>
       <div id="datasetsList.container.bulkActions.importDatasets" title="Import datasets from another document">
         <button class="btn btn-primary btn-sm"><i class="fas fa-download"></i></button>
       </div>
