--- a/views/charts/asap/pie.pug
+++ b/views/charts/asap/pie.pug
@@ -11,9 +11,12 @@
   <body>
     img(src=conf.root + "/public/img/cropped-ASAP_Logo_FullColor.png" alt="Aligning Science Across Parkinson's" height="55" width="295")
     div(id="graphic")
-    label Document URL: #{document_url}
-    label Assessed at: #{assessed_at}
-    label Dataseer report: #{report_url}
+    if(document_url)
+      label Document URL: #{document_url}
+    if(assessed_at)
+      label Assessed at: #{assessed_at}
+    if(report_url)
+      label Dataseer report: #{report_url}
     <!-- include of global js dependencies -->
     script(src=conf.root + "/public/js/dependencies/d3.min.js")
     script(src=conf.root + "/public/js/dependencies/jquery.min.js")
