update: add datasets properties (c.f. https://dataseerworkspace.slack.com/archives/C01FFV5E268/p1644609115283129)

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -18,7 +18,7 @@ div(id='datasetForm.screen')
     <div id="datasetForm.container">
       <table>
         <tr class="custom-row">
-          <th>
+          <th colspan="4">
             <div key="datasets">
               <div key="dataset" class="tpl">
                 <div key="dataset.tab" value=""></div>
@@ -31,7 +31,7 @@ div(id='datasetForm.screen')
           </th>
         </tr>
         <tr class="custom-row">
-          <td class="dataset-header">
+          <td class="dataset-header" colspan="4">
             <div key="dataset.label" value=""></div>
             <div key="dataset.status" value="unknow"><i class="far fa-question-circle"></i></div>
             <button name='datasetForm.unlink' class="btn btn-danger btn-sm btn-lite" title="Unlink selected sentence to this dataset">
@@ -40,122 +40,137 @@ div(id='datasetForm.screen')
           </td>
         </tr>
         <tr class="custom-row" style="display: none;">
-          <td>
+          <td colspan="4">
             <div key="dataset.id" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Text:</div>
             <div key="sentence.text" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td class="checkboxes">
             <div>re-use:</div>
             <div key="dataset.reuse" value="false"></div>
             <input name="datasetForm.reuse" target="dataset.reuse" type="checkbox" class="form-control" />
           </td>
+          <td class="checkboxes">
+            <div>QC/Confirmatory:</div>
+            <div key="dataset.qc" value="false"></div>
+            <input name="datasetForm.qc" target="dataset.qc" type="checkbox" class="form-control" />
+          </td>
+          <td class="checkboxes">
+            <div>Representative Image:</div>
+            <div key="dataset.representativeImage" value="false"></div>
+            <input name="datasetForm.representativeImage" target="dataset.representativeImage" type="checkbox" class="form-control" />
+          </td>
+          <td class="checkboxes">
+            <div>Issue:</div>
+            <div key="dataset.issue" value="false"></div>
+            <input name="datasetForm.issue" target="dataset.issue" type="checkbox" class="form-control" />
+          </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Data type:</div>
             <div key="dataset.dataType" value=""></div>
             <select name="datasetForm.dataType" target="dataset.dataType" class="form-control"></select>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Sub type:</div>
             <div key="dataset.subType" value=""></div>
             <select name="datasetForm.subType" target="dataset.subType" class="form-control"></select>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Custom Data type:</div>
             <div key="dataset.customDataType" value=""></div>
             <input name="datasetForm.customDataType" target="dataset.customDataType" type="text" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Description:</div>
             <div key="dataset.description" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Best practice for sharing this type of data:</div>
             <div key="dataset.bestDataFormatForSharing" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Best practice for indicating re-use of existing data:</div>
             <div key="dataset.bestPracticeForIndicatingReUseOfExistingData" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Most suitable repositories:</div>
             <a key="dataset.url" value="http://wiki.dataseer.ai/doku.php" href="http://wiki.dataseer.ai/doku.php" target="_blank"><i class="fas fa-question"></i></a>
             <div key="dataset.mostSuitableRepositories" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>RepoRecommender:</div>
             <a href="https://dataseer.ai/reporecommender-form/" title="RepoRecommender help you know which repositories to choose" target="_blank"><i class="fas fa-question"></i></a>
             <div key="dataset.repoRecommenderUrls" value="undefined">undefined</div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Highlight this dataset:</div>
             <div key="dataset.highlight" value="false"></div>
             <input name="datasetForm.highlight" target="dataset.highlight" type="checkbox" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div key="dataset.notification" value="" class="notification alert alert-info" title="This message come from a curator"></div>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Enter a message here (or leave it empty so nothing will be displayed):</div>
             <input name="datasetForm.notification" target="dataset.notification" value="" type="text" placeholder="Enter the message here or leave it empty" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Please provide a name for this dataset (e.g. 'sampling locations'):</div>
             <div key="dataset.name" value=""></div>
             <input name="datasetForm.name" target="dataset.name" value="" type="text" placeholder="Provide the name here" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Please provide the DOI (or other stable link) to this dataset:</div>
             <div key="dataset.DOI" value=""></div>
             <input name="datasetForm.DOI" target="dataset.DOI" value="" type="text" placeholder="Provide the DOI here" class="form-control" />
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <div>Please enter any comments here (such as a reason why this dataset cannot be shared):</div>
             <div key="dataset.comments" value=""></div>
             <textarea name="datasetForm.comments" target="dataset.comments" value="" type="text" placeholder="Enter any comments here" class="form-control"></textarea>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <button name='datasetForm.done' class='btn btn-primary'><i class="fas fa-check"></i> Done with this Dataset</button>
           </td>
         </tr>
         <tr class="custom-row">
-          <td>
+          <td colspan="4">
             <button name='datasetForm.refreshDatatypes' class="btn btn-primary btn-sm" loading='false'>Refresh Datatypes <i class="fas fa-sync-alt"></i></button>
           </td>
         </tr>
