--- a/public/css/datasets/datasets.css
+++ b/public/css/datasets/datasets.css
@@ -487,7 +487,6 @@ body {
   max-height: 50px;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -501,7 +500,7 @@ body {
 }
 
 #datasetForm th,
-#datasetForm td {
+#datasetForm td.dataset-header {
   width: 100%;
 }
 
@@ -513,6 +512,12 @@ body {
 #datasetForm .custom-row div {
   display: inline-block;
   font-weight: bold;
+}
+
+#datasetForm .custom-row .checkboxes div {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 #datasetForm .custom-row div[key] {
@@ -534,9 +539,9 @@ body {
 
 #datasetForm .custom-row input[type="checkbox"] {
   display: inline-block;
-  width: 25px;
-  margin-left: 5px;
-  margin-top: 4px;
+  width: 12px;
+  margin-left: 0px;
+  vertical-align: middle;
 }
 
 #datasetForm .custom-row input[type="text"] {
