update: update GUI to improve build of reports

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -159,6 +159,34 @@ div(id='datasetForm.screen')
         </tr>
         <tr class="custom-row">
           <td colspan="4">
+            <div>Please provide the RRID to this dataset:</div>
+            <div key="dataset.RRID" value=""></div>
+            <input name="datasetForm.RRID" target="dataset.RRID" value="" type="text" placeholder="Provide the RRID here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the "suggested RRID citation" to this dataset:</div>
+            <div key="dataset.citation" value=""></div>
+            <input name="datasetForm.citation" target="dataset.citation" value="" type="text" placeholder="Provide the suggested RRID citation here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the "catalog number" to this dataset:</div>
+            <div key="dataset.catalog" value=""></div>
+            <input name="datasetForm.catalog" target="dataset.catalog" value="" type="text" placeholder="Provide the catalog number here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the "name of entity identified" to this dataset:</div>
+            <div key="dataset.entity" value=""></div>
+            <input name="datasetForm.entity" target="dataset.entity" value="" type="text" placeholder="Provide the name of entity identified here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
             <div>Please enter any comments here (such as a reason why this dataset cannot be shared):</div>
             <div key="dataset.comments" value=""></div>
             <textarea name="datasetForm.comments" target="dataset.comments" value="" type="text" placeholder="Enter any comments here" class="form-control"></textarea>
