update: implement new properties

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -168,7 +168,40 @@ div(id='datasetForm.screen')
           <td colspan="4">
             <div>Please provide the "suggested RRID citation" to this dataset:</div>
             <div key="dataset.citation" value=""></div>
-            <input name="datasetForm.citation" target="dataset.citation" value="" type="text" placeholder="Provide the suggested RRID citation here" class="form-control" />
+            <input name="datasetForm.citation" target="dataset.citation" value="" type="text" placeholder="Provide the 'suggested RRID citation' here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the PID to this dataset:</div>
+            <div key="dataset.PID" value=""></div>
+            <input name="datasetForm.PID" target="dataset.PID" value="" type="text" placeholder="Provide the PID here" class="form-control" />
+          </td>
+        </tr>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the version to this dataset:</div>
+            <div key="dataset.version" value=""></div>
+            <input name="datasetForm.version" target="dataset.version" value="" type="text" placeholder="Provide the version here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the "Name of Lab or Commercial Source" to this dataset:</div>
+            <div key="dataset.labSource" value=""></div>
+            <input name="datasetForm.labSource" target="dataset.labSource" value="" type="text" placeholder="Provide the 'Name of Lab or Commercial Source' here" class="form-control" />
+          </td>
+        </tr>
+        <tr class="custom-row">
+          <td colspan="4">
+            <div>Please provide the "Protocol Type" to this dataset:</div>
+            <div key="dataset.protocolSource" value=""></div>
+            <select name="datasetForm.protocolSource" target="dataset.protocolSource" class="form-control">
+              <option value="">Not a protocol</option>
+              <option value="Another Protocol">Another Protocol</option>
+              <option value="Manufacturer's Instructions">Manufacturer's Instructions</option>
+            </select>
           </td>
         </tr>
         <tr class="custom-row">
