--- a/views/root/backoffice/upload/layout.pug
+++ b/views/root/backoffice/upload/layout.pug
@@ -7,4 +7,5 @@ block app
   include ./app.pug
 
 block scripts
+  script(src=conf.pathname + "/public/js/conf/upload.js")
   script(src=conf.pathname + "/views/backoffice/upload/app.js")
