--- a/views/root/documents/:id/finish/app.pug
+++ b/views/root/documents/:id/finish/app.pug
@@ -49,24 +49,19 @@
       </div>
       <div v-if="user.role && (user.role.key === 'moderator' || user.role.key === 'administrator')" class="row buttons">
         <div class="col left">
-          <a target="_blank" :href="gSpreadSheetReportLinks.ASAP">
-            <button class="btn btn-md btn-primary">Open ASAP report (Google Drive)</button>
-          </a>
-          <button class="btn btn-md btn-primary" v-on:click.stop="buildGSpreadSheetReport(event, 'ASAP')">Build ASAP report (Google Drive)</button>
-          <span class="loader-md" ref="buildGSpreadSheetASAPReportLoader">
-            <i class="fas fa-circle-notch fa-spin"></i>
-          </span>
-        </div>
-      </div>
-      <div v-if="user.role && (user.role.key === 'moderator' || user.role.key === 'administrator')" class="row buttons">
-        <div class="col left">
-          <a target="_blank" :href="gSpreadSheetReportLinks.AmNat">
-            <button class="btn btn-md btn-primary">Open AmNat report (Google Drive)</button>
-          </a>
-          <button class="btn btn-md btn-primary" v-on:click.stop="buildGSpreadSheetReport(event, 'AmNat')">Build AmNat report (Google Drive)</button>
-          <span class="loader-md" ref="buildGSpreadSheetAmNatReportLoader">
-            <i class="fas fa-circle-notch fa-spin"></i>
-          </span>
+          <div class="google-reports bold">Google Drive Report: 
+            <select class="custom-select form-select" v-model="gSpreadSheetReportName">
+              <option value="AmNat">AmNat</option>
+              <option value="ASAP">ASAP</option>
+            </select>
+            <a target="_blank" :href="gSpreadSheetReportLinks[gSpreadSheetReportName]">
+              <button class="btn btn-md btn-primary">Open</button>
+            </a>
+            <button class="btn btn-md btn-primary" v-on:click.stop="buildGSpreadSheetReport(event, gSpreadSheetReportName)">Generate</button>
+            <span class="loader-md" ref="buildGSpreadSheetASAPReportLoader">
+              <i class="fas fa-circle-notch fa-spin"></i>
+            </span>
+          </div>
         </div>
       </div>
       <div v-if="user.role && (user.role.key === 'administrator')" class="row buttons">
