--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -162,6 +162,7 @@ div(id='datasetForm.screen')
             <div>Please provide the RRID to this dataset:</div>
             <div key="dataset.RRID" value=""></div>
             <input name="datasetForm.RRID" target="dataset.RRID" value="" type="text" placeholder="Provide the RRID here" class="form-control" />
+            <a key="RRID.searchUrl" href="">Search for the entity "<label key="RRID.entity"></label>" on the RRID Portal</a>
           </td>
         </tr>
         <tr class="custom-row">
