update : hide 'Protocol Type' row

--- a/views/root/documents/:id/datasets/lib/datasetForm.pug
+++ b/views/root/documents/:id/datasets/lib/datasetForm.pug
@@ -194,7 +194,7 @@ div(id='datasetForm.screen')
             <input name="datasetForm.labSource" target="dataset.labSource" value="" type="text" placeholder="Provide the 'Name of Lab or Commercial Source' here" class="form-control" />
           </td>
         </tr>
-        <tr class="custom-row">
+        <tr class="custom-row" style="display: none;">
           <td colspan="4">
             <div>Please provide the "Protocol Type" to this dataset:</div>
             <div key="dataset.protocolSource" value=""></div>
